# _super_simple_stock_market_

./: .gitignore  README.md  pyproject.toml
src/super_simple_stock_market/api/: gbce.py
src/super_simple_stock_market/models/: stock.py  trade.py
src/super_simple_stock_market/services/: stock_service.py  trade_service.py
src/super_simple_stock_market/utils/: constants.py  exceptions.py
tests/unit/services/: test_stock_service.py  test_trade_service.py
